test(agentic-ai): restructure ToolCallResultDocumentExtractorTest around behaviour
- Wire a real GatewayToolHandlerRegistryImpl with a single mocked
  handler (managing one tool name); all tests share this setup. Drops
  the mock-registry-vs-real-registry split and the
  integrationWithRealRegistry_ prefix.
- Rename tests to describe observable behaviour ("extractsFrom…",
  "groupsDocumentsByToolCall…", "extractsFromEventLikeResultWithNullId…")
  instead of leaking the implementation choice ("usesContentTreeWalker…").
- Cover the same cases (handler delegation, walker fallback, grouping,
  exclusion, null filtering, event-like null id/name) plus an explicit
  "no documents → empty result" assertion.