@@ -13,7 +13,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import io.camunda.connector.agenticai.aiagent.tool.GatewayToolHandler;
-import io.camunda.connector.agenticai.aiagent.tool.GatewayToolHandlerRegistry;
 import io.camunda.connector.agenticai.aiagent.tool.GatewayToolHandlerRegistryImpl;
 import io.camunda.connector.agenticai.model.tool.ToolCallResult;
 import io.camunda.connector.api.document.Document;
@@ -22,9 +21,9 @@ import io.camunda.connector.api.document.DocumentFactory;
 import io.camunda.connector.runtime.core.document.DocumentFactoryImpl;
 import io.camunda.connector.runtime.core.document.store.InMemoryDocumentStore;
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -34,45 +33,42 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class ToolCallResultDocumentExtractorTest {
 
+  private static final String MANAGED_TOOL = "typed_tool";
+
   private final InMemoryDocumentStore documentStore = InMemoryDocumentStore.INSTANCE;
   private final DocumentFactory documentFactory = new DocumentFactoryImpl(documentStore);
 
-  @Mock private GatewayToolHandlerRegistry registry;
+  @Mock private GatewayToolHandler handler;
 
   private ToolCallResultDocumentExtractor extractor;
 
   @BeforeEach
   void setUp() {
     documentStore.clear();
-    extractor = new ToolCallResultDocumentExtractor(registry);
+    when(handler.type()).thenReturn("typed");
+    when(handler.isGatewayManaged(any()))
+        .thenAnswer(inv -> MANAGED_TOOL.equals(inv.getArgument(0)));
+    extractor =
+        new ToolCallResultDocumentExtractor(new GatewayToolHandlerRegistryImpl(List.of(handler)));
   }
 
   @Test
-  void usesContentTreeWalkerWhenNoHandlerManagesTheToolCall() {
+  void extractsDocumentsFromUnmanagedResultViaContentWalker() {
     final var doc = createDocument("hello", "text/plain", "test.txt");
-    final var result =
-        ToolCallResult.builder()
-            .id("call_1")
-            .name("plain_bpmn_tool")
-            .content(Map.of("file", doc))
-            .build();
-
-    when(registry.handlerForToolDefinition("plain_bpmn_tool")).thenReturn(Optional.empty());
+    final var result = unmanagedResult("call_1", Map.of("file", doc));
 
     final var extracted = extractor.extractDocuments(List.of(result));
 
     assertThat(extracted).hasSize(1);
     assertThat(extracted.getFirst().documents()).containsExactly(doc);
+    verify(handler, never()).extractDocuments(any());
   }
 
   @Test
-  void delegatesToHandlerWhenManaged(@Mock GatewayToolHandler handler) {
+  void extractsDocumentsFromManagedResultViaHandler() {
     final var doc = createDocument("typed", "text/plain", "typed.txt");
-    final var typedContent = new TypedHandlerContent(doc);
-    final var result =
-        ToolCallResult.builder().id("call_1").name("typed_tool").content(typedContent).build();
+    final var result = managedResult("call_1", new TypedHandlerContent(doc));
 
-    when(registry.handlerForToolDefinition("typed_tool")).thenReturn(Optional.of(handler));
     when(handler.extractDocuments(result)).thenReturn(List.of(doc));
 
     final var extracted = extractor.extractDocuments(List.of(result));
@@ -83,59 +79,40 @@ class ToolCallResultDocumentExtractorTest {
   }
 
   @Test
-  void doesNotConsultHandlerWhenContentHasNoDocumentsAndIsUnmanaged() {
-    final var result =
-        ToolCallResult.builder().id("call_1").name("unknown").content("plain text").build();
-    when(registry.handlerForToolDefinition("unknown")).thenReturn(Optional.empty());
+  void groupsDocumentsByToolCallAcrossManagedAndUnmanagedResults() {
+    final var managedDoc = createDocument("typed", "text/plain", "typed.txt");
+    final var unmanagedDoc = createDocument("plain", "text/plain", "plain.txt");
 
-    assertThat(extractor.extractDocuments(List.of(result))).isEmpty();
-  }
+    final var managed = managedResult("call_1", new TypedHandlerContent(managedDoc));
+    final var unmanaged = unmanagedResult("call_2", Map.of("file", unmanagedDoc));
 
-  @Test
-  void groupsExtractedDocumentsByToolCall() {
-    final var doc1 = createDocument("hello", "text/plain", "test.txt");
-    final var doc2 = createDocument("<pdf>", "application/pdf", "report.pdf");
+    when(handler.extractDocuments(managed)).thenReturn(List.of(managedDoc));
 
-    final var result1 =
-        ToolCallResult.builder().id("call_1").name("tool_a").content(Map.of("file", doc1)).build();
-    final var result2 =
-        ToolCallResult.builder()
-            .id("call_2")
-            .name("tool_b")
-            .content(Map.of("report", doc2))
-            .build();
-
-    when(registry.handlerForToolDefinition(any())).thenReturn(Optional.empty());
-
-    final var extracted = extractor.extractDocuments(List.of(result1, result2));
+    final var extracted = extractor.extractDocuments(List.of(managed, unmanaged));
 
     assertThat(extracted).hasSize(2);
     assertThat(extracted.get(0))
         .satisfies(
             e -> {
               assertThat(e.toolCallId()).isEqualTo("call_1");
-              assertThat(e.toolCallName()).isEqualTo("tool_a");
-              assertThat(e.documents()).containsExactly(doc1);
+              assertThat(e.toolCallName()).isEqualTo(MANAGED_TOOL);
+              assertThat(e.documents()).containsExactly(managedDoc);
             });
     assertThat(extracted.get(1))
         .satisfies(
             e -> {
               assertThat(e.toolCallId()).isEqualTo("call_2");
-              assertThat(e.toolCallName()).isEqualTo("tool_b");
-              assertThat(e.documents()).containsExactly(doc2);
+              assertThat(e.toolCallName()).isEqualTo("plain_tool");
+              assertThat(e.documents()).containsExactly(unmanagedDoc);
             });
   }
 
   @Test
-  void excludesToolCallsWithoutDocuments() {
+  void excludesResultsWithoutDocuments() {
     final var doc = createDocument("hello", "text/plain", "test.txt");
 
-    final var withDoc =
-        ToolCallResult.builder().id("call_1").name("tool_a").content(Map.of("file", doc)).build();
-    final var withoutDoc =
-        ToolCallResult.builder().id("call_2").name("tool_b").content("plain text result").build();
-
-    when(registry.handlerForToolDefinition(any())).thenReturn(Optional.empty());
+    final var withDoc = unmanagedResult("call_1", Map.of("file", doc));
+    final var withoutDoc = unmanagedResult("call_2", "plain text result");
 
     final var extracted = extractor.extractDocuments(List.of(withDoc, withoutDoc));
 
@@ -144,13 +121,19 @@ class ToolCallResultDocumentExtractorTest {
   }
 
   @Test
-  void filtersNullDocumentsReturnedByHandler(@Mock GatewayToolHandler handler) {
-    final var doc = createDocument("typed", "text/plain", "typed.txt");
-    final var result =
-        ToolCallResult.builder().id("call_1").name("typed_tool").content("anything").build();
+  void returnsEmptyWhenNoResultsContainDocuments() {
+    final var result = unmanagedResult("call_1", "plain text");
 
-    when(registry.handlerForToolDefinition("typed_tool")).thenReturn(Optional.of(handler));
-    when(handler.extractDocuments(result)).thenReturn(java.util.Arrays.asList(doc, null, doc));
+    assertThat(extractor.extractDocuments(List.of(result))).isEmpty();
+    verify(handler, never()).extractDocuments(any());
+  }
+
+  @Test
+  void filtersNullDocumentsReturnedByHandler() {
+    final var doc = createDocument("typed", "text/plain", "typed.txt");
+    final var result = managedResult("call_1", new TypedHandlerContent(doc));
+
+    when(handler.extractDocuments(result)).thenReturn(Arrays.asList(doc, null, doc));
 
     final var extracted = extractor.extractDocuments(List.of(result));
 
@@ -159,11 +142,10 @@ class ToolCallResultDocumentExtractorTest {
   }
 
   @Test
-  void handlesNullNameAndId() {
+  void extractsFromEventLikeResultWithNullIdAndName() {
+    // Events arrive as ToolCallResult with null id/name — no handler matches, walker is used
     final var doc = createDocument("hello", "text/plain", "test.txt");
     final var result = ToolCallResult.builder().content(Map.of("file", doc)).build();
-
-    when(registry.handlerForToolDefinition(null)).thenReturn(Optional.empty());
 
     final var extracted = extractor.extractDocuments(List.of(result));
 
@@ -173,72 +155,17 @@ class ToolCallResultDocumentExtractorTest {
             e -> {
               assertThat(e.toolCallId()).isNull();
               assertThat(e.toolCallName()).isNull();
+              assertThat(e.documents()).containsExactly(doc);
             });
-  }
-
-  @Test
-  void integrationWithRealRegistry_fallsBackToWalkerWhenNoHandlerMatches() {
-    final var realExtractor =
-        new ToolCallResultDocumentExtractor(new GatewayToolHandlerRegistryImpl(List.of()));
-
-    final var doc = createDocument("hello", "text/plain", "test.txt");
-    final var result =
-        ToolCallResult.builder()
-            .id("call_1")
-            .name("plain_bpmn_tool")
-            .content(Map.of("attachment", doc))
-            .build();
-
-    final var extracted = realExtractor.extractDocuments(List.of(result));
-
-    assertThat(extracted).hasSize(1);
-    assertThat(extracted.getFirst().documents()).containsExactly(doc);
-  }
-
-  @Test
-  void integrationWithRealRegistry_routesToManagingHandler(@Mock GatewayToolHandler handler) {
-    final var doc = createDocument("typed", "text/plain", "typed.txt");
-    final var typedContent = new TypedHandlerContent(doc);
-
-    when(handler.type()).thenReturn("typed");
-    when(handler.isGatewayManaged("typed_tool")).thenReturn(true);
-    when(handler.extractDocuments(any(ToolCallResult.class))).thenReturn(List.of(doc));
-
-    final var realExtractor =
-        new ToolCallResultDocumentExtractor(new GatewayToolHandlerRegistryImpl(List.of(handler)));
-
-    final var result =
-        ToolCallResult.builder().id("call_1").name("typed_tool").content(typedContent).build();
-
-    final var extracted = realExtractor.extractDocuments(List.of(result));
-
-    assertThat(extracted).hasSize(1);
-    assertThat(extracted.getFirst().documents()).containsExactly(doc);
-    verify(handler).extractDocuments(result);
-  }
-
-  @Test
-  void integrationWithRealRegistry_doesNotConsultHandlerForUnmanagedTool(
-      @Mock GatewayToolHandler handler) {
-    when(handler.type()).thenReturn("typed");
-    when(handler.isGatewayManaged("plain_tool")).thenReturn(false);
-
-    final var realExtractor =
-        new ToolCallResultDocumentExtractor(new GatewayToolHandlerRegistryImpl(List.of(handler)));
-
-    final var doc = createDocument("hello", "text/plain", "test.txt");
-    final var result =
-        ToolCallResult.builder()
-            .id("call_1")
-            .name("plain_tool")
-            .content(Map.of("attachment", doc))
-            .build();
-
-    final var extracted = realExtractor.extractDocuments(List.of(result));
-
-    assertThat(extracted).hasSize(1);
-    assertThat(extracted.getFirst().documents()).containsExactly(doc);
     verify(handler, never()).extractDocuments(any());
+  }
+
+  private ToolCallResult managedResult(String id, Object content) {
+    return ToolCallResult.builder().id(id).name(MANAGED_TOOL).content(content).build();
+  }
+
+  private ToolCallResult unmanagedResult(String id, Object content) {
+    return ToolCallResult.builder().id(id).name("plain_tool").content(content).build();
   }
 
   private Document createDocument(String content, String contentType, String filename) {
